# VouchFlow

./: Cargo.toml  README.md  build.rs
src/: config.rs  lib.rs  main.rs  settings_callbacks_block.rs
src/application/: mod.rs  orchestrator.rs
src/application/providers/: byu.rs  mod.rs  router.rs  smartfren.rs  telkomsel.rs  traits.rs
src/application/services/: check.rs  mod.rs  physical.rs  product.rs  redeem.rs  stok.rs  webhook.rs
src/application/store/: central_store.rs  mod.rs
src/callbacks/: dashboard.rs  mod.rs  model_helpers.rs  produk.rs  settings.rs  stok.rs  utility.rs
src/domain/: commands.rs  errors.rs  events.rs  mod.rs  models.rs
src/infrastructure/: mod.rs
src/infrastructure/channels/: command_bus.rs  db_command.rs  event_bus.rs  mod.rs
src/infrastructure/database/: connection.rs  migrations.rs  mod.rs  schema.rs  writer.rs
src/infrastructure/provider/: circuit_breaker.rs  client.rs  mod.rs
src/presentation/: mod.rs
src/presentation/gateway/: handlers.rs  middleware.rs  mod.rs  server.rs
src/presentation/ui/: bridge.rs  mod.rs
src/utils/: date.rs  mod.rs  tracing.rs  webhook.rs
ui/: main.slint  palette.slint  sidebar.slint  state.slint
ui/components/: button.slint  checkbox.slint  combobox.slint  confirm_dialog.slint  context_menu.slint  datepicker.slint  footer.slint  header.slint  overlay_slide_panel.slint  switch.slint  table.slint  tabs.slint  textedit.slint  textinput.slint  widgets.slint
ui/pages/: dashboard.slint  logs.slint  master_data.slint  page.slint  produk.slint  settings.slint  utility.slint
(+2 files in other folders)
