[package]
name = "vouchflow"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "vouchflow"
path = "src/lib.rs"

[dependencies]
# UI
slint = { version = "1.15.1", features = ["renderer-winit-skia"] }
i-slint-backend-winit = "1.15.1"

# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Web Framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Utilities
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
single-instance = "0.3"

# Async channel patterns
async-channel = "2.3"
futures = "0.3"

# Cryptography (for provider auth)
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
md5 = "0.7"
base64 = "0.22"

# Async trait
async-trait = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }


[build-dependencies]
lucide-slint = "0.1.4"
slint-build = "1.15.1"
winres = "0.1"
